# midi-hub

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: review.yml
public/: app.js  index.html  style.css
src/: main.c  main.rs  spotify.rs
src/apps/: mod.rs
src/apps/forward/: app.rs  config.rs
src/apps/paint/: app.rs  config.rs
src/apps/selection/: app.rs  config.rs  mod.rs
src/apps/spotify/: app.rs  authorization.rs  client.rs  config.rs  mod.rs
src/apps/spotify/app/: access_token.rs  app.rs  mod.rs  playback.rs  poll_events.rs  poll_playlist.rs  poll_state.rs  render_logo.rs  render_state.rs
src/apps/spotify/client/: implementation.rs  interface.rs  mod.rs
src/apps/youtube/: app.rs  config.rs  mod.rs
src/image/: image.rs  mod.rs  scale.rs
src/image/snapshots/: midi_hub__image__tests__compress_8x8_from_decoder.snap  midi_hub__image__tests__compress_8x8_from_url.snap  midi_hub__image__tests__compress_from_decoder.snap  midi_hub__image__tests__compress_from_url.snap  midi_hub__image__tests__load_cover_from_url_and_scale_to_8x8.snap
src/launchpad/: mod.rs
src/midi/: command.rs  connections.rs  device.rs  error.rs  features.rs  mod.rs
src/midi/devices/: config.rs  mod.rs
src/midi/devices/default/: mod.rs
src/midi/devices/launchpadpro/: app_selector.rs  color_palette.rs  device.rs  grid_controller.rs  image.rs  image_renderer.rs  index.rs  index_selector.rs  mod.rs
src/midi/launchpadpro/: device.rs  index.rs  mod.rs
src/midi/launchpadpro/event/: image.rs  index.rs  mod.rs
src/router/: mod.rs
src/server/: mod.rs
src/spotify/: app.rs  authorization.rs  mod.rs
src/youtube/: app.rs  client.rs  mod.rs  server.rs
