[package]
name = "midi-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portmidi = "^0.2"
signal-hook = "^0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.2"
querystring = "^1.1"
base64 = "^0.13"
open = "^2.0"
rand = "^0.8"
jpeg-decoder = "^0.2"
jpeg-encoder = "^0.4"
insta = "^1.10"
warp = "^0.3"

# These features are only used for testing purposes.
# Only turn one at a time, as portmidi will fail on macOS if initialized/dropped multiple times.
[features]
launchpadpro = []
planckez = []
spotify = []
